--- a/public/addAdmin.css
+++ b/public/addAdmin.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #0f0f0f !important;
+  background-color: #EA2C62 !important;
   font-family: "Open Sans", sans-serif;
   display: flex;
   align-items: center;
