--- a/views/adminlogin.ejs
+++ b/views/adminlogin.ejs
@@ -334,6 +334,7 @@ h6 span {
                 <div class="center-wrap">
                   <div class="section text-center">	
                     <h4 class="mb-4 pb-3">Log In</h4>	
+                    <h3><%= msg %></h3>
                     <div class="form-group">
                       <form action="/login" method="post">
                       <input type="email" name="email" class="form-style" placeholder="Your Email" id="logemail" autocomplete="none">	
