--- a/views/Adminpage.ejs
+++ b/views/Adminpage.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <title>Admin Page</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -34,6 +34,12 @@
                     </li>
                   
                 </ul>
+                <ul class="navbar-nav ms-auto mb-lg-0">
+                    <li class="nav-item">
+                        <a href="/logout" class="nav-link rounded-3 btn-lg-danger" style="color:white !important;font-weight:700 !important ;background-color: red;">LOGOUT</a>
+                    </li>
+                  
+                </ul>
             </div>
         </nav>
     <div class="row cards" style="margin: 0;">
@@ -42,16 +48,21 @@
             <h1 class="card__title "><%= feedback.length %></h1>
             
         </div> 
-        <div class="card card-2 col-lg-4">
-            <h1 class="card__title"><%= feedback.length %></h1>
-            
-        </div>
+        <div class="col-lg-4">
+           <center> 
+               <a href="/viewFranchise" class="card card-2 col-lg-4" style="text-decoration: none;">
+                <h1 >Franchise Requests</h1>
+                <h1 class="card__title"><%= franc.length %></h1>
+               </a>
+            </center>   
+           
+       </div>
     </div> 
    
     
-                <div class="msg-description" id="ie" style="display: none;" > 
+                <!-- <div class="msg-description" id="ie" style="display: none;" > 
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat est nemo consequatur eos incidunt id veritatis deserunt illo, accusamus quam optio explicabo, dolorum similique praesentium facere deleniti tenetur possimus maiores.
-                </div>
+                </div> -->
         </div>
          
     </div>
@@ -73,10 +84,10 @@
                      <button class="btn btn-danger" value="<%= feedback[i]._id %>" type="submit" onclick="deletefeed(this)" >Delete</button>
                 </form>
                 </div>      
-            </div>
-                <div class="msg-description" id="ie" style="display: none;transition: all 10s;" >
+             </div>
+                <div class="msg-description" id="ie" style="display: none;" >
                     <h4> <%= feedback[i].subject %> </h4>
-                      <p> <%= feedback[i].message %> </p>
+                     <p> <%= feedback[i].message %> </p>
                 </div>
         </div>
          
